Adicionando LOGIN no projeto

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>FORMULÁRIO GIT</h1>
+    <h2>LOGIN</h2>
     <form action="/submit" method="post">
         <label for="nome">Nome:</label>
         <input type="text" id="nome" required placeholder="Digite seu nome">
