--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>FORMULÁRIO GIT</h1>
     <h2>LOGIN</h2>
-    <form action="/submit" method="post">
+    <form action="submit.html" method="post">
         <label for="nome">Nome:</label>
         <input type="text" id="nome" required placeholder="Digite seu nome">
         <br></br>
