Mudança na cor do BOTÃO e troca de imagem após ENVIAR

--- a/submit.html
+++ b/submit.html
@@ -23,8 +23,7 @@
 <body>
     <div>
         <h1>Obrigado por enviar!</h1>
-        <p>Aqui está um cachorrinho para alegrar seu dia:</p>
-        <img src="https://media.giphy.com/media/3o6Zt8K8g8g8g8g8g8/giphy.gif" alt="Cachorrinho">
+        <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExdDBoenNjNnljd21rczQzN2xucTRpejEwd2pybHBqaWN3dzBnaGQ3bCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/tHIRLHtNwxpjIFqPdV/giphy.gif" alt="pedropedro">
     </div>
 </body>
 </html>
