--- a/submit.html
+++ b/submit.html
@@ -23,7 +23,7 @@
 <body>
     <div>
         <h1>Obrigado por enviar!</h1>
-        <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExdDBoenNjNnljd21rczQzN2xucTRpejEwd2pybHBqaWN3dzBnaGQ3bCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/tHIRLHtNwxpjIFqPdV/giphy.gif" alt="pedropedro">
+        <img src="http://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExdDBoenNjNnljd21rczQzN2xucTRpejEwd2pybHBqaWN3dzBnaGQ3bCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/tHIRLHtNwxpjIFqPdV/giphy.gif" alt="pedropedro">
     </div>
 </body>
 </html>
